Update ReadMe.md about VM settings for JavaFX