@@ -1,5 +1,6 @@
 # ServiceDesk-in-work
- Рабочий репозиторий проекта Service Desk. 
+Рабочий репозиторий проекта Service Desk. 
 ### Прочитать README - обязательно.  
 Build Structure Settings in Intelij IDEA:  Java 11; JDK - Amazon Corretto 11; Language Level - 11;
 
+Для запуска нужно скачать JavaFX SDK 11, в настройках VM установить: --module-path "path/to/file"/lib --add-modules javafx.controls,javafx.fxml 
